--- a/Web/GreenCap.Web/Views/Shared/_Layout.cshtml
+++ b/Web/GreenCap.Web/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-          <nav class="navbar navbar-expand-lg navbar-dark bg-secondary border-bottom box-shadow mb-3">                                                     
+          <nav class="navbar navbar-expand-lg navbar-dark bg-secondary border-bottom box-shadow mb-6">                                                     
               <div class="container">                                                                                                                      
                   <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@GlobalConstants.SystemName</a>                             
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -44,12 +44,25 @@
                                   <a class="dropdown-item" href="#">Separated link</a>
                               </div>
                           </li>
-                          <li class="nav-item">
-                              <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>
+                          <li class="nav-item dropdown">
+                              <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" asp-area="" asp-controller="Events" asp-action="All" role="button" aria-haspopup="true" aria-expanded="false">Events</a>
+                              <div class="dropdown-menu">
+                                  <a class="dropdown-item" asp-area="" asp-controller="Events" asp-action="All">View all</a>
+                                  <a class="dropdown-item" asp-area="" asp-controller="Events" asp-action="Create">Create new event</a>
+                                  <div class="dropdown-divider"></div>
+                                  <a class="dropdown-item" href="#">Separated link</a>
+                              </div>
                           </li>
                           <li class="nav-item">
-                              <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                              <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="All">News</a>
                           </li>
+
+                          <!--<li class="nav-item">-->
+                          <!--<a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>-->
+                          <!--</li>-->
+                          <!--<li class="nav-item">-->
+                          <!--<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>-->
+                          <!--</li>-->
                       </ul>                                                                                                                                
                   </div>                                                                                                                                   
               </div>                                                                                                                                       
