--- a/Web/GreenCap.Web/Views/Forum/Create.cshtml
+++ b/Web/GreenCap.Web/Views/Forum/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@using GreenCap.Common
 @using GreenCap.Web.ViewModels.InputViewModels
 @using GreenCap.Data.Models.Enums
-@model ForumInputViewModel
+@model PostInputViewModel
 
 @{
     this.ViewData["Title"] = "Create post";
