--- a/Web/GreenCap.Web/Views/Shared/_Layout.cshtml
+++ b/Web/GreenCap.Web/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                   <a class="dropdown-item" asp-area="" asp-controller="Forum" asp-action="Categories">Categories</a>
                                   <a class="dropdown-item" asp-area="" asp-controller="Forum" asp-action="Create">Create new post</a>
                                   <div class="dropdown-divider"></div>
-                                  <a class="dropdown-item" href="#">Separated link</a>
+                                  <a class="dropdown-item" asp-controller="Forum" asp-action="Personal">Personal posts</a>
                               </div>
                           </li>
                           <li class="nav-item dropdown">
