--- a/Web/GreenCap.Web/Views/News/All.cshtml
+++ b/Web/GreenCap.Web/Views/News/All.cshtml
@@ -1,46 +1,31 @@
-﻿@{
+﻿@using GreenCap.Web.ViewModels.OutputViewModel
+@{
     this.ViewData["Title"] = "Latest news";
 }
 
 
-
-
+<div class="jumbotron text-center">
+    <h1 class="text-primary display-4">Latest news around the world! <a href="https://phys.org/biology-news/ecology/sort/date/all/" class="alert-link">Click here!</a></h1>
+</div>
 
 <div class="container">
     <div class="row">
         <div class="col-12 col-sm-12 col-lg-12">
-            <h6 class="text-muted">List Group with Images</h6>
+            <h6 class="text-muted">All articles</h6>
             <ul class="list-group">
-                <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                    <div class="image-parent">
-                        <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/don_quixote.jpg" class="img-fluid image-parent" alt="quixote">
-                    </div>
-                    <div class="flex-fill">
-                        Don Quixote
-                        <p><small>by Miguel de Cervantes</small></p>
-                        <span class="badge badge-info badge-pill"> 2 Copies in Stock</span>
-                    </div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                    <div class="image-parent">
-                        <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/as_I_lay.jpg" class="img-fluid" alt="lay">
-                    </div>
-                    <div class="flex-column">
-                        As I Lay Dying
-                        <p><small>by William Faulkner</small></p>
-                        <span class="badge badge-primary badge-pill"> 5 Copies in Stock</span>
-                    </div>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                    <div class="image-parent">
-                        <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/as_I_lay.jpg" class="img-fluid" alt="lay">
-                    </div>
-                    <div class="flex-column">
-                        As I Lay Dying
-                        <p><small>by William Faulkner</small></p>
-                        <span class="badge badge-primary badge-pill"> 5 Copies in Stock</span>
-                    </div>
-                </a>
+                @foreach (NewsOutputViewModel article in Model)
+                {
+                    <a href="/News/Details?id=@article" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                            <div class="image-parent">
+                                <img src=@article.SmallPhotoUrl alt="quixote">
+                            </div>
+                            <div class="flex-column text-info">
+                                @article.Title
+                                <p><small class="text-muted">@article.Summary </small></p>
+                                <!--<span class="badge badge-info badge-pill"> 2 Copies in Stock</span>-->
+                            </div>
+                    </a>
+                }
             </ul>
         </div>
     </div>
