--- a/Web/GreenCap.Web/Views/News/All.cshtml
+++ b/Web/GreenCap.Web/Views/News/All.cshtml
@@ -15,7 +15,7 @@
             <ul class="list-group">
                 @foreach (NewsOutputViewModel article in Model)
                 {
-                    <a href="/News/Details?id=@article" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                    <a href="/News/Details?id=@article.Id" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                             <div class="image-parent">
                                 <img src=@article.SmallPhotoUrl alt="quixote">
                             </div>
