small scraping improvements

--- a/Web/GreenCap.Web/Views/News/Details.cshtml
+++ b/Web/GreenCap.Web/Views/News/Details.cshtml
@@ -9,7 +9,7 @@
     <br>
     <img src=@Model.ImageUrl class="rounded img-fluid mx-auto d-block" alt="Responsive image">
     <div class="container p-3 my-3 bg-info text-dark"  >
-        <p>Credit: @Model.Credit</p>
+        <p>@Model.Credit</p>
         <p>Posted on: @Model.PostedOn</p>
         <p>Original site: <a href=@Model.MainPageUrl class="text-white">Phys.org</a></p>
         <p>Category: @Model.CategoryName</p>
