pagination and automapper for proposals

--- a/Web/GreenCap.Web/Views/Proposals/Create.cshtml
+++ b/Web/GreenCap.Web/Views/Proposals/Create.cshtml
@@ -1,6 +1,5 @@
-﻿@using GreenCap.Common
-@using GreenCap.Web.ViewModels.InputViewModels
-@model ProposalInputViewModel
+﻿@using GreenCap.Web.ViewModels.InputViewModels
+@model ProposalViewModel
 
 @{
     this.ViewData["Title"] = "Create proposal";
