--- a/Web/GreenCap.Web/Views/Forum/Personal.cshtml
+++ b/Web/GreenCap.Web/Views/Forum/Personal.cshtml
@@ -19,28 +19,16 @@
                     </div>
                 </div>}
 
-<div>
-    <ul class="pagination pagination-lg">
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center pagination-lg">
         <li class="page-item disabled">
-            <a class="page-link" href="#">&laquo;</a>
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
         </li>
-        <li class="page-item active">
-            <a class="page-link" href="#">1</a>
-        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
         <li class="page-item">
-            <a class="page-link" href="#">2</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">3</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">4</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">5</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">&raquo;</a>
+            <a class="page-link" href="#">Next</a>
         </li>
     </ul>
-</div>
+</nav>
