automapper for forum

--- a/Web/GreenCap.Web/Views/Forum/All.cshtml
+++ b/Web/GreenCap.Web/Views/Forum/All.cshtml
@@ -7,7 +7,7 @@
 @foreach (var post in Model.Posts)
 {
 <br />
-                <div class="card text-white bg-info active">
+                <div class="card text-white bg-secondary active">
                     <div class="card-header">
                         @post.CreatorName posted on @post.PostedOn
                         <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
