add pagination to forum, change dto about home statistics

--- a/Web/GreenCap.Web/Views/Proposals/Personal.cshtml
+++ b/Web/GreenCap.Web/Views/Proposals/Personal.cshtml
@@ -15,11 +15,11 @@
         <img class="card-img-top" src=@proposal.Image alt="Card image cap">
         <div class="card-body">
             <h2 class="card-title">@proposal.Title</h2>
-            <h5 class="card-title">@proposal.ShortDescription</h5>
+            <h5 class="card-title text-success">@proposal.ShortDescription</h5>
         </div>
         <div class="card-footer">
             <small class="text-muted">@proposal.CreatedOn</small>
-            <a class="btn float-right" href="/Proposals/Details?id=@proposal.Id"><i class="fas fa-info-circle"></i></a>
+            <a class="btn float-right text-primary" href="/Proposals/Details?id=@proposal.Id"><i class="fas fa-info-circle"></i></a>
         </div>
     </div>
 </div>}
