--- a/Web/GreenCap.Web/Views/Forum/Categories.cshtml
+++ b/Web/GreenCap.Web/Views/Forum/Categories.cshtml
@@ -1,7 +1,7 @@
 ﻿@using GreenCap.Web.ViewModels.OutputViewModel
 @using GreenCap.Data.Models.Enums
 @{
-    this.ViewData["Title"] = "Forum categories " + Model.PageNumber;
+    this.ViewData["Title"] = "Forum category " + Model.PageNumber;
 }
 
 @model PostsListOutputViewModel
@@ -27,129 +27,131 @@
     </li>
 </ul>
 
-<div id="myTabContent" class="tab-content">   
+<div id="myTabContent" class="tab-content">
+
     <div class="tab-pane fade show active" id="general">
         @foreach (PostOutputViewModel post in Model.Posts)
         {
-            @if(post.CategoryName==Category.General.ToString())
+            @if (post.CategoryName == Category.General.ToString())
             {
-               <br />
+                <br />
                 <div class="card text-white bg-success active">
                     <div class="card-header">
                         @post.CreatorName posted on @post.PostedOn
                         <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
                         <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2"> @post.Likes </button>
                     </div>
-                <div class="card-body">
-                    <h3 class="card-title">@post.ProblemTitle</h3>
-                    <p class="card-text">@post.Description</p>
-                </div>
-            </div>
-            }            
-        }
-    </div>
-   
-    <div class="tab-pane fade" id="health">
-        @foreach (PostOutputViewModel post in Model.Posts)
-        {
-            @if(post.CategoryName==Category.Health.ToString())
-            {
-              <br />
-                <div class="card text-white bg-danger active">
-                    <div class="card-header">
-                        @post.CreatorName posted on @post.PostedOn
-                        <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
-                        <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2"> @post.Likes </button>
+                    <div class="card-body">
+                        <h3 class="card-title">@post.ProblemTitle</h3>
+                        <p class="card-text">@post.Description</p>
                     </div>
-                <div class="card-body">
-                    <h3 class="card-title">@post.ProblemTitle</h3>
-                    <p class="card-text">@post.Description</p>
                 </div>
-            </div>
-            }            
+            }
         }
     </div>
-    <div class="tab-pane fade" id="ecology">
-        @foreach (PostOutputViewModel post in Model.Posts)
-        {             
-            @if(post.CategoryName==Category.Ecology.ToString())
-            {
-              <br />
-                <div class="card text-white bg-secondary active">
-                    <div class="card-header">
-                        @post.CreatorName posted on @post.PostedOn
-                        <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
-                        <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2"> @post.Likes </button>
-                    </div>
-                <div class="card-body">
-                    <h3 class="card-title">@post.ProblemTitle</h3>
-                    <p class="card-text">@post.Description</p>
-                </div>
-            </div>
-            }            
-        }
-    </div>
-    <div class="tab-pane fade" id="exercise">
-        @foreach (PostOutputViewModel post in Model.Posts)
-        {             
-            @if(post.CategoryName==Category.Exercise.ToString())
-            {
-                <br />
-                <div class="card text-white bg-warning active">
-                    <div class="card-header">
-                        @post.CreatorName posted on @post.PostedOn
-                        <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
-                        <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2"> @post.Likes </button>
-                    </div>
-                <div class="card-body">
-                    <h3 class="card-title">@post.ProblemTitle</h3>
-                    <p class="card-text">@post.Description</p>
-                </div>
-            </div>
-            }            
-        }
-    </div>
-    <div class="tab-pane fade" id="envirment">
-        @foreach (PostOutputViewModel post in Model.Posts)
-        {
-            @if(post.CategoryName==Category.Environment.ToString())
-            {
-                <br />
-                <div class="card text-white bg-info active">
-                    <div class="card-header">
-                        @post.CreatorName posted on @post.PostedOn
-                        <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
-                        <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2"> @post.Likes </button>
-                    </div>
-                <div class="card-body">
-                    <h3 class="card-title">@post.ProblemTitle</h3>
-                    <p class="card-text">@post.Description</p>
-                </div>
-            </div>
-            }            
-        }
-    </div>
-    <div class="tab-pane fade show" id="other">
-        @foreach (PostOutputViewModel post in Model.Posts)
-        {
-            @if(post.CategoryName==Category.Other.ToString())
-            {
-                <br />
-                <div class="card text-white bg-primary active">
-                    <div class="card-header">
-                        @post.CreatorName posted on @post.PostedOn
-                        <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
-                        <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2"> @post.Likes </button>
-                    </div>
-                <div class="card-body">
-                    <h3 class="card-title">@post.ProblemTitle</h3>
-                    <p class="card-text">@post.Description</p>
-                </div>
-            </div>
-            }            
-        }
-    </div>
-    <br />
-</div>
 
-<partial name="_PagingPartial" model="@Model" />
+
+        <div class="tab-pane fade" id="health">
+            @foreach (PostOutputViewModel post in Model.Posts)
+            {
+                @if (post.CategoryName == Category.Health.ToString())
+                {
+                    <br />
+                    <div class="card text-white bg-danger active">
+                        <div class="card-header">
+                            @post.CreatorName posted on @post.PostedOn
+                            <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
+                            <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2"> @post.Likes </button>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">@post.ProblemTitle</h3>
+                            <p class="card-text">@post.Description</p>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+        <div class="tab-pane fade" id="ecology">
+            @foreach (PostOutputViewModel post in Model.Posts)
+            {
+                @if (post.CategoryName == Category.Ecology.ToString())
+                {
+                    <br />
+                    <div class="card text-white bg-secondary active">
+                        <div class="card-header">
+                            @post.CreatorName posted on @post.PostedOn
+                            <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
+                            <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2"> @post.Likes </button>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">@post.ProblemTitle</h3>
+                            <p class="card-text">@post.Description</p>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+        <div class="tab-pane fade" id="exercise">
+            @foreach (PostOutputViewModel post in Model.Posts)
+            {
+                @if (post.CategoryName == Category.Exercise.ToString())
+                {
+                    <br />
+                    <div class="card text-white bg-warning active">
+                        <div class="card-header">
+                            @post.CreatorName posted on @post.PostedOn
+                            <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
+                            <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2"> @post.Likes </button>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">@post.ProblemTitle</h3>
+                            <p class="card-text">@post.Description</p>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+        <div class="tab-pane fade" id="envirment">
+            @foreach (PostOutputViewModel post in Model.Posts)
+            {
+                @if (post.CategoryName == Category.Environment.ToString())
+                {
+                    <br />
+                    <div class="card text-white bg-info active">
+                        <div class="card-header">
+                            @post.CreatorName posted on @post.PostedOn
+                            <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
+                            <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2"> @post.Likes </button>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">@post.ProblemTitle</h3>
+                            <p class="card-text">@post.Description</p>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+        <div class="tab-pane fade show" id="other">
+            @foreach (PostOutputViewModel post in Model.Posts)
+            {
+                @if (post.CategoryName == Category.Other.ToString())
+                {
+                    <br />
+                    <div class="card text-white bg-primary active">
+                        <div class="card-header">
+                            @post.CreatorName posted on @post.PostedOn
+                            <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2"> @post.DissLikes </button>
+                            <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2"> @post.Likes </button>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">@post.ProblemTitle</h3>
+                            <p class="card-text">@post.Description</p>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+        <br />
+    </div>
+
+<!--<partial name="_PagingPartial" model="@Model" />-->
