--- a/Web/GreenCap.Web/Views/Home/Index.cshtml
+++ b/Web/GreenCap.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GreenCap.Common
-@model GreenCap.Web.ViewModels.Home.HomeViewModel
+@model GreenCap.Web.ViewModels.OutputViewModel.HomeStatisticsOutputViewModel
 
 @{ 
     this.ViewData["Title"] = "Home Page"; 
@@ -19,19 +19,23 @@
     <ul class="list-group display-5">
         <li class="list-group-item d-flex justify-content-between align-items-center col-md-4">
             Total posts:
-            <span class="badge badge-primary badge-pill">@Model.TotalPosts</span>
+            <span class="badge badge-primary badge-pill">@Model.PostsCount</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center col-md-4">
             Total proposals:
-            <span class="badge badge-primary badge-pill">@Model.TotalProposals</span>
+            <span class="badge badge-primary badge-pill">@Model.ProposalsCount</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center col-md-4">
             Total events:
-            <span class="badge badge-primary badge-pill">@Model.TotalEvents</span>
+            <span class="badge badge-primary badge-pill">@Model.EventsCount</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center col-md-4">
             Total users:
-            <span class="badge badge-primary badge-pill">@Model.TotalUsers</span>
+            <span class="badge badge-primary badge-pill">@Model.UsersCount</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center col-md-4">
+            Total news:
+            <span class="badge badge-primary badge-pill">@Model.NewsCount</span>
         </li>
     </ul>
 
