add photos to proposals, bug fix with pagination

--- a/Web/GreenCap.Web/Views/Shared/_PagingPartial.cshtml
+++ b/Web/GreenCap.Web/Views/Shared/_PagingPartial.cshtml
@@ -1,22 +1,23 @@
 ﻿@model PagingViewModel
+
 <nav aria-label="...">
     <ul class="pagination justify-content-center pagination-lg">
         @if (Model.HasPreviousPage)
         {
     <li class="page-item">
-        <a class="page-link" asp-action="All" asp-route-id="1">
+        <a class="page-link" asp-action="@Model.AspAction" asp-route-id="1">
             <span aria-hidden="true">&laquo;</span>
         </a>
     </li>}
 
         <li class="page-item @if (!Model.HasPreviousPage) { <text>disabled</text> }">
-            <a class="page-link" asp-action="All" asp-route-id="@Model.PreviousPageNumber">Previous</a>
+            <a class="page-link" asp-action="@Model.AspAction" asp-route-id="@Model.PreviousPageNumber">Previous</a>
         </li>
         @for (int i = Model.PageNumber - 3; i < Model.PageNumber; i++)
         {
             if (i > 0)
             {
-    <li class="page-item"><a class="page-link" asp-action="All" asp-route-id="@i">@i</a></li>}
+    <li class="page-item"><a class="page-link" asp-action="@Model.AspAction" asp-route-id="@i">@i</a></li>}
                 }
         <li class="page-item active" aria-current="page">
             <span class="page-link">
@@ -28,16 +29,16 @@
         {
             if (i <= Model.PagesCount)
             {
-    <li class="page-item"><a class="page-link" asp-action="All" asp-route-id="@i">@i</a></li>}
+    <li class="page-item"><a class="page-link" asp-action="@Model.AspAction" asp-route-id="@i">@i</a></li>}
                 }
         <li class="page-item @if (!Model.HasNextPage) { <text>disabled</text> }">
-            <a class="page-link" asp-action="All" asp-route-id="@Model.NextPageNumber">Next</a>
+            <a class="page-link" asp-action="@Model.AspAction" asp-route-id="@Model.NextPageNumber">Next</a>
         </li>
 
         @if (Model.HasNextPage)
         {
             <li class="page-item">
-                <a class="page-link" asp-action="All" asp-route-id="@Model.PagesCount">
+                <a class="page-link" asp-action="@Model.AspAction" asp-route-id="@Model.PagesCount">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
