--- a/Web/GreenCap.Web/Views/Proposals/Create.cshtml
+++ b/Web/GreenCap.Web/Views/Proposals/Create.cshtml
@@ -9,7 +9,7 @@
     <h1 class="display-3">Share your innovative ideas!</h1>
     <p class="lead">Tell us your eco friendly idea that will help to make our word greener.</p>
     <hr class="my-4">
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         <fieldset>
             <div class="form-group">
                 <label asp-for="Title"></label>
@@ -18,9 +18,9 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="Image"></label>
-                <input asp-for="Image" class="form-control col-md-4">
-                <span asp-validation-for="Image" class="text-danger"></span>
+                <label asp-for="Images"></label>
+                <input asp-for="Images" class="form-control col-md-4">
+                <span asp-validation-for="Images" class="text-danger"></span>
                 
             </div>
 
