implement voting system for proposals, changes on view for proposal details

--- a/Web/GreenCap.Web/Views/News/All.cshtml
+++ b/Web/GreenCap.Web/Views/News/All.cshtml
@@ -6,7 +6,7 @@
 @model NewsListOutputViewModel
 
 <div class="jumbotron text-center">
-    <h1 class="text-primary display-4">Latest news around the world! <a href="https://phys.org/biology-news/ecology/sort/date/all/" class="alert-link">Click here!</a></h1>
+    <h1 class="text-primary display-4">Latest news around the world! <a href="https://phys.org/biology-news/ecology/sort/date/all/" target="_blank" class="alert-link">Click here!</a></h1>
 </div>
 
 <div class="container">
