--- a/Web/GreenCap.Web/Views/Proposals/All.cshtml
+++ b/Web/GreenCap.Web/Views/Proposals/All.cshtml
@@ -9,7 +9,7 @@
     {
 <div class="card-deck col-sm-3 col-md-6 col-lg-4">
     <div class="card">
-        <img class="card-img-top" src=@proposal.ImageUrl alt="Card image cap">
+        <img class="card-img-top" src=@proposal.ImageUrl alt="No available image." />
         <div class="card-body">
             <h2 class="card-title">@proposal.Title</h2>
             <h5 class="card-title text-success">@proposal.ShortDescription</h5>
